Remote config timer

--- a/src/client/config.html
+++ b/src/client/config.html
@@ -5,6 +5,23 @@
 		<script defer src="config.js"></script>
 	</head>
 	<body>
-		Hořice Config
+		<section>
+			<h1>Timer</h1>
+			<div>
+				<input
+					type="number"
+					min="0"
+					step="1"
+					value="0"
+					class="js-timer-input"
+				/>
+				<button type="button" class="js-timer-set">Set</button>
+			</div>
+			<div>
+				<button type="button" class="js-timer-start">Start</button>
+				<button type="button" class="js-timer-pause">Pause</button>
+				<button type="button" class="js-timer-stop">Stop</button>
+			</div>
+		</section>
 	</body>
 </html>
