Screen: show real countdown

--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -4,7 +4,16 @@
 		<title>Screen</title>
 		<script defer src="screen.js"></script>
 	</head>
+	<style>
+		* {
+			font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+		}
+		.timer {
+			font-variant-numeric: tabular-nums;
+		}
+	</style>
 	<body>
 		Hořice Screen
+		<div class="js-timer timer">0:00</div>
 	</body>
 </html>
