--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -5,15 +5,34 @@
 		<script defer src="screen.js"></script>
 	</head>
 	<style>
+		body {
+			margin: 0;
+			color: #ffffff;
+			background-color: #000000;
+		}
 		* {
 			font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
 		}
+		.playground {
+			position: relative;
+			background-image: url('./background.png');
+			width: 1200px;
+			height: 1920px;
+		}
 		.timer {
+			position: absolute;
+			top: 788px;
+			font-size: 70px;
+			font-weight: 700;
+			left: 500px;
+			right: 517px;
+			text-align: center;
 			font-variant-numeric: tabular-nums;
 		}
 	</style>
 	<body>
-		Hořice Screen
-		<div class="js-timer timer">0:00</div>
+		<div class="playground">
+			<div class="js-timer timer">0:00</div>
+		</div>
 	</body>
 </html>
