--- a/src/client/index.html
+++ b/src/client/index.html
@@ -4,7 +4,60 @@
 		<title>Rozsviť hořice</title>
 		<script defer src="index.js"></script>
 	</head>
+	<style>
+		body {
+			margin: 0;
+			color: #ffffff;
+			background-color: #000000;
+		}
+		* {
+			font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+		}
+		.playground {
+			position: relative;
+			width: 1200px;
+			height: 1920px;
+			touch-action: none;
+		}
+		.playground::before {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			background-image: url('./background.png');
+			opacity: 0.2;
+		}
+		.playground::after {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			background-image: url('./mask.png');
+		}
+		.reflector {
+			position: absolute;
+			top: 0;
+			left: 0;
+		}
+		.reflector::before {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100px;
+			height: 100px;
+			border-radius: 50%;
+			transform: translate(-50%, -50%);
+			background-color: rgba(255, 255, 255, 0.5);
+		}
+	</style>
 	<body>
-		Hořice
+		<div class="playground js-playground">
+			<div class="reflector js-reflector"></div>
+		</div>
 	</body>
 </html>
