--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -15,9 +15,27 @@
 		}
 		.playground {
 			position: relative;
-			background-image: url('./background.png');
 			width: 1200px;
 			height: 1920px;
+		}
+		.playground::before {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			background-image: url('./background.png');
+			opacity: 0.2;
+		}
+		.playground::after {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			background-image: url('./mask.png');
 		}
 		.timer {
 			position: absolute;
