--- a/src/client/index.html
+++ b/src/client/index.html
@@ -18,6 +18,7 @@
 			width: 1200px;
 			height: 1920px;
 			touch-action: none;
+			overflow: hidden;
 		}
 		.playground::before {
 			content: '';
