Client x Screen: reflectors sharing base

--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -42,15 +42,15 @@
 			top: 788px;
 			font-size: 70px;
 			font-weight: 700;
-			left: 500px;
-			right: 517px;
-			text-align: center;
+			left: 0;
+			right: 536px;
+			text-align: right;
 			font-variant-numeric: tabular-nums;
 		}
 	</style>
 	<body>
 		<div class="playground">
-			<div class="js-timer timer">0:00</div>
+			<div class="js-timer timer"></div>
 		</div>
 	</body>
 </html>
