--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -47,10 +47,36 @@
 			text-align: right;
 			font-variant-numeric: tabular-nums;
 		}
+		.reflectors {
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+		}
+		.reflectors div {
+			position: absolute;
+			top: 0;
+			left: 0;
+		}
+		.reflectors div::before {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100px;
+			height: 100px;
+			border-radius: 50%;
+			transform: translate(-50%, -50%);
+			background-color: rgba(255, 255, 255, 0.5);
+		}
 	</style>
 	<body>
 		<div class="playground">
 			<div class="js-timer timer"></div>
+			<div class="js-reflectors reflectors"></div>
 		</div>
 	</body>
 </html>
