Screen: fade out inactive timer

--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -46,6 +46,12 @@
 			right: 536px;
 			text-align: right;
 			font-variant-numeric: tabular-nums;
+			opacity: 0;
+			transition: opacity 0.3s 1s;
+		}
+		.timer.is-active {
+			opacity: 1;
+			transition-delay: 0s;
 		}
 		.reflectors {
 			width: 100%;
