--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -66,6 +66,12 @@
 			position: absolute;
 			top: 0;
 			left: 0;
+			opacity: 0;
+			transition: opacity 0.3s 1s;
+		}
+		.reflectors div.is-active {
+			opacity: 1;
+			transition-delay: 0s;
 		}
 		.reflectors div::before {
 			content: '';
