--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -30,7 +30,7 @@
 			left: 0;
 			right: 0;
 			bottom: 0;
-			background-image: url('./background.png');
+			background-image: url('./background.jpg');
 			opacity: 0.2;
 		}
 		.playground::after {
