Screen: entrance link

--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -142,10 +142,19 @@
 		.involved-content {
 			position: relative;
 		}
+		.entrance {
+			position: absolute;
+			top: 1546px;
+			left: 423px;
+			right: 442px;
+			text-align: center;
+			font-size: 35px;
+		}
 
 		.timer,
 		.sponsors,
-		.involved-content {
+		.involved-content,
+		.entrance {
 			z-index: 1;
 			text-shadow: 0 0 17px #000000;
 			filter: drop-shadow(0 0 17px #000000);
@@ -177,6 +186,9 @@
 						ČECHOVÁ.
 					</div>
 				</div>
+			</div>
+			<div class="entrance">
+				www.rosvithorice.cz
 			</div>
 		</div>
 	</body>
