Dynamic involved duration controlled by config

--- a/src/client/config.html
+++ b/src/client/config.html
@@ -23,5 +23,18 @@
 				<button type="button" class="js-timer-stop">Stop</button>
 			</div>
 		</section>
+		<section>
+			<h1>Involved</h1>
+			<div>
+				<input
+					type="number"
+					min="1"
+					step="1"
+					value="40"
+					class="js-involved-duration-input"
+				/>
+				<button type="button" class="js-involved-duration-set">Set</button>
+			</div>
+		</section>
 	</body>
 </html>
