--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -67,6 +67,7 @@
 			left: 0;
 			right: 0;
 			bottom: 0;
+			color: #ffdb76;
 		}
 		.reflectors div {
 			position: absolute;
@@ -88,7 +89,8 @@
 			height: 100px;
 			border-radius: 50%;
 			transform: translate(-50%, -50%);
-			background-color: rgba(255, 255, 255, 0.5);
+			background-color: currentColor;
+			opacity: 0.5;
 		}
 		.sponsors {
 			position: absolute;
