--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -80,17 +80,17 @@
 			opacity: 1;
 			transition-delay: 0s;
 		}
-		.reflectors div::before {
+		.reflectors div::before,
+		.reflectors div::after {
 			content: '';
 			position: absolute;
 			top: 0;
 			left: 0;
-			width: 100px;
-			height: 100px;
+			width: 60px;
+			height: 60px;
 			border-radius: 50%;
 			transform: translate(-50%, -50%);
-			background-color: currentColor;
-			opacity: 0.5;
+			background: radial-gradient(currentColor -1%, transparent 70%);
 		}
 		.sponsors {
 			position: absolute;
