--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -234,7 +234,7 @@
 				</div>
 			</div>
 			<div class="entrance">
-				www.rosvithorice.cz
+				www.rozsvithorice.cz
 			</div>
 			<div class="camera">
 				<div class="camera-first">
