--- a/src/client/config.html
+++ b/src/client/config.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8" />
 		<title>Config</title>
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, minimum-scale=1"
+		/>
 		<script defer src="config.js"></script>
 	</head>
 	<body>
