--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8" />
 		<title>Rozsviť hořice</title>
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, minimum-scale=1"
+		/>
+		<meta name="theme-color" content="#000000" />
 		<script defer src="index.js"></script>
 	</head>
 	<style>
