--- a/src/client/index.html
+++ b/src/client/index.html
@@ -15,56 +15,60 @@
 			margin: 0;
 			color: #ffffff;
 			background-color: #000000;
+			overflow: hidden;
+			width: 100vw;
+			height: 100vh;
+			touch-action: none;
 		}
 		* {
 			font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
 		}
-		.playground {
-			position: relative;
+		.background {
+			position: absolute;
+			top: calc(50vh - 960px);
+			left: calc(50vw - 600px);
 			width: 1200px;
 			height: 1920px;
-			touch-action: none;
-			overflow: hidden;
 		}
-		.playground::before {
+		.background::before,
+		.background::after {
 			content: '';
 			position: absolute;
 			top: 0;
+			bottom: 0;
 			left: 0;
 			right: 0;
-			bottom: 0;
 			background-image: url('./background.jpg');
-			opacity: 0.2;
 		}
-		.playground::after {
-			content: '';
-			position: absolute;
-			top: 0;
-			left: 0;
-			right: 0;
-			bottom: 0;
+		.background::before {
+			opacity: 0.5;
+		}
+		.background::after {
 			background-image: url('./mask.png');
 		}
 		.reflector {
 			position: absolute;
-			top: 0;
-			left: 0;
+			top: 50%;
+			left: 50%;
 		}
-		.reflector::before {
+		.reflector::before,
+		.reflector::after {
 			content: '';
 			position: absolute;
 			top: 0;
 			left: 0;
-			width: 100px;
-			height: 100px;
+			width: 60px;
+			height: 60px;
 			border-radius: 50%;
 			transform: translate(-50%, -50%);
-			background-color: rgba(255, 255, 255, 0.5);
+			background: radial-gradient(currentColor -1%, transparent 70%);
 		}
 	</style>
 	<body>
 		<div class="playground js-playground">
-			<div class="reflector js-reflector"></div>
+			<div class="background">
+				<div class="reflector js-reflector"></div>
+			</div>
 		</div>
 	</body>
 </html>
