Reflector: start from label

--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -83,6 +83,7 @@
 		}
 		.reflectors div.is-active {
 			opacity: 1;
+			transition-duration: 1s;
 			transition-delay: 0s;
 		}
 		.reflectors div::before,
