--- a/src/client/index.html
+++ b/src/client/index.html
@@ -23,12 +23,20 @@
 		* {
 			font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
 		}
+		@keyframes fade-in {
+			100% {
+				opacity: 1;
+			}
+		}
 		.playground {
 			position: fixed;
 			top: 0;
 			left: 0;
 			bottom: 0;
 			right: 0;
+			opacity: 0;
+			animation: fade-in 0.3s 0.3s forwards;
+			overflow: hidden;
 		}
 		.background {
 			position: absolute;
