--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -28,6 +28,7 @@
 			position: relative;
 			width: 1200px;
 			height: 1920px;
+			overflow: hidden;
 		}
 		.playground::before {
 			content: '';
