--- a/src/client/index.html
+++ b/src/client/index.html
@@ -60,11 +60,13 @@
 		}
 		.background::after {
 			background-image: url('./mask.png');
+			opacity: 0.3;
 		}
 		.reflector {
 			position: absolute;
 			top: 50%;
 			left: 50%;
+			mix-blend-mode: soft-light;
 		}
 		.reflector::before,
 		.reflector::after {
@@ -72,8 +74,8 @@
 			position: absolute;
 			top: 0;
 			left: 0;
-			width: 60px;
-			height: 60px;
+			width: 90px;
+			height: 90px;
 			border-radius: 50%;
 			transform: translate(-50%, -50%);
 			background: radial-gradient(currentColor -1%, transparent 70%);
