--- a/src/client/index.html
+++ b/src/client/index.html
@@ -60,13 +60,14 @@
 		}
 		.background::after {
 			background-image: url('./mask.png');
-			opacity: 0.3;
+			opacity: 0.6;
 		}
 		.reflector {
 			position: absolute;
 			top: 50%;
 			left: 50%;
-			mix-blend-mode: soft-light;
+			mix-blend-mode: multiply;
+			color: #ffdb76;
 		}
 		.reflector::before,
 		.reflector::after {
@@ -74,8 +75,8 @@
 			position: absolute;
 			top: 0;
 			left: 0;
-			width: 90px;
-			height: 90px;
+			width: 130px;
+			height: 130px;
 			border-radius: 50%;
 			transform: translate(-50%, -50%);
 			background: radial-gradient(currentColor -1%, transparent 70%);
