--- a/src/client/index.html
+++ b/src/client/index.html
@@ -12,6 +12,7 @@
 	</head>
 	<style>
 		body {
+			--reflector-size: 130px;
 			margin: 0;
 			color: #ffffff;
 			background-color: #000000;
@@ -60,7 +61,7 @@
 		}
 		.background::after {
 			background-image: url('./mask.png');
-			opacity: 0.6;
+			opacity: 0.8;
 		}
 		.reflector {
 			position: absolute;
@@ -75,8 +76,8 @@
 			position: absolute;
 			top: 0;
 			left: 0;
-			width: 130px;
-			height: 130px;
+			width: var(--reflector-size);
+			height: var(--reflector-size);
 			border-radius: 50%;
 			transform: translate(-50%, -50%);
 			background: radial-gradient(currentColor -1%, transparent 70%);
