Pointer events polyfill

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -8,6 +8,7 @@
 			content="width=device-width, initial-scale=1, minimum-scale=1"
 		/>
 		<meta name="theme-color" content="#000000" />
+		<script defer src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
 		<script defer src="index.js"></script>
 	</head>
 	<style>
@@ -102,7 +103,7 @@
 		}
 	</style>
 	<body>
-		<div class="playground js-playground">
+		<div class="playground js-playground" touch-action="none">
 			<div class="instructions">
 				Hýbejte světlem<br />posunem prstu<br />po obrazovce
 			</div>
