Entrance: easier to read

--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -172,11 +172,22 @@
 		}
 		.entrance {
 			position: absolute;
-			top: 1546px;
-			left: 423px;
-			right: 442px;
+			top: 1544px;
+			left: 275px;
+			right: 294px;
 			text-align: center;
 			font-size: 35px;
+			text-transform: uppercase;
+		}
+		.entrance span:first-child,
+		.entrance span:last-child {
+			opacity: 0.5;
+		}
+		.entrance span:last-child {
+			padding-right: 1ex;
+		}
+		.entrance span:nth-child(2) {
+			padding-right: 0.3ex;
 		}
 		.camera {
 			position: absolute;
@@ -242,7 +253,7 @@
 				</div>
 			</div>
 			<div class="entrance">
-				www.rozsvithorice.cz
+				<span>www.</span><span>rozsvit</span><span>horice</span><span>.cz</span>
 			</div>
 			<div class="camera">
 				<div class="camera-first">
