Screen: no flash without icon

--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -191,22 +191,11 @@
 		}
 		.camera {
 			position: absolute;
-			top: 1540px;
-			left: 142px;
-			right: 151px;
-			display: flex;
-			justify-content: space-between;
-			font-size: 18px;
-		}
-		.camera-first,
-		.camera-last {
+			top: 1549px;
+			left: 902px;
+			right: 114px;
+			font-size: 20px;
 			text-align: center;
-		}
-		.camera img {
-			margin-top: 0.5em;
-		}
-		.camera-last {
-			padding-top: 4px;
 		}
 
 		.timer,
@@ -256,16 +245,9 @@
 				<span>www.</span><span>rozsvit</span><span>horice</span><span>.cz</span>
 			</div>
 			<div class="camera">
-				<div class="camera-first">
-					NO FLASH
-					<br />
-					<img src="./camera.png" width="70" height="70" alt="" />
-				</div>
-				<div class="camera-last">
-					BEZ BLESKU
-					<br />
-					<img src="./camera.png" width="70" height="70" alt="" />
-				</div>
+				Foťte bez blesku!
+				<br />
+				No flash!
 			</div>
 		</div>
 	</body>
