Client: disable text selection

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -26,6 +26,7 @@
 			width: 100vw;
 			height: 100vh;
 			touch-action: none;
+			user-select: none;
 		}
 		* {
 			font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
