--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="cs">
 	<head>
 		<meta charset="utf-8" />
 		<title>Rozsviť hořice</title>
@@ -8,6 +8,11 @@
 			content="width=device-width, initial-scale=1, minimum-scale=1"
 		/>
 		<meta name="theme-color" content="#000000" />
+		<link rel="icon" type="image/png" href="icon/36.png" />
+		<link rel="icon" sizes="36x36" href="icon/36.png" />
+		<link rel="icon" sizes="48x48" href="icon/48.png" />
+		<link rel="icon" sizes="96x96" href="icon/96.png" />
+		<link rel="icon" sizes="192x192" href="icon/192.png" />
 		<script defer src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
 		<script defer src="index.js"></script>
 	</head>
