--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -180,26 +180,33 @@
 		}
 		.entrance {
 			position: absolute;
-			top: 1544px;
+			top: 1530px;
 			left: 345px;
 			right: 364px;
 			text-align: center;
-			font-size: 35px;
-			text-transform: uppercase;
+			font-size: 30px;
+			line-height: 1.3;
 		}
-		.entrance span:first-child,
-		.entrance span:last-child {
+		.entrance div {
+			font-size: 16px;
 			opacity: 0.5;
 		}
-		.entrance span:last-child {
+		.entrance span {
+			text-transform: uppercase;
+		}
+		.entrance span:first-of-type,
+		.entrance span:last-of-type {
+			opacity: 0.5;
+		}
+		.entrance span:last-of-type {
 			padding-right: 1ex;
 		}
-		.entrance span:nth-child(2) {
+		.entrance span:nth-of-type(2) {
 			padding-right: 0.3ex;
 		}
 		.camera {
 			position: absolute;
-			top: 1544px;
+			top: 1543px;
 			left: 912px;
 			right: 124px;
 			font-size: 18px;
@@ -227,7 +234,6 @@
 			right: -10px;
 			bottom: -10px;
 			background-color: rgba(0, 0, 0, 0.5);
-			filter: drop-shadow(0 0 5px #000000);
 		}
 		.involved-content::before {
 			top: -5px;
@@ -245,6 +251,9 @@
 		.sponsors-last::before {
 			top: -6px;
 			bottom: -6px;
+		}
+		.entrance::before {
+			top: -2px;
 		}
 	</style>
 	<body>
@@ -280,7 +289,11 @@
 					</div>
 				</div>
 			</div>
+			<div class="entrance-invite">
+				zapojte se na
+			</div>
 			<div class="entrance">
+				<div>zapojte se na</div>
 				<span>www.</span><span>rozsvit</span><span>horice</span><span>.cz</span>
 			</div>
 			<div class="camera">
