Config: toggle building visibility

--- a/src/client/config.html
+++ b/src/client/config.html
@@ -41,5 +41,19 @@
 				<button type="button" class="js-involved-duration-set">Set</button>
 			</div>
 		</section>
+		<section>
+			<h1>Building</h1>
+			<div>
+				<label>
+					<input type="checkbox" class="js-building-visible" />
+					Building visible
+				</label>
+				<br />
+				<label>
+					<input type="checkbox" class="js-building-only" />
+					Building only
+				</label>
+			</div>
+		</section>
 	</body>
 </html>
