--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -38,7 +38,19 @@
 			right: 0;
 			bottom: 0;
 			background-image: url('./background.jpg');
+			opacity: 0;
+			visibility: hidden;
+			transition-property: opacity, visibility;
+			transition-duration: 0.5s;
+		}
+		.is-buildingVisible .playground::before {
 			opacity: 0.2;
+			visibility: visible;
+		}
+		.is-buildingOnly .playground::before {
+			opacity: 1;
+			visibility: visible;
+			z-index: 100;
 		}
 		.playground::after {
 			content: '';
