--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -314,5 +314,17 @@
 				No flash!
 			</div>
 		</div>
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=UA-52555251-9"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || []
+			function gtag() {
+				dataLayer.push(arguments)
+			}
+			gtag('js', new Date())
+			gtag('config', 'UA-52555251-9')
+		</script>
 	</body>
 </html>
