Config: button group

--- a/src/client/config.html
+++ b/src/client/config.html
@@ -33,14 +33,14 @@
 						Set
 					</button>
 				</div>
-				<div>
-					<button type="button" class="btn btn-primary js-timer-start">
+				<div class="btn-group">
+					<button type="button" class="btn btn-success js-timer-start">
 						Start
 					</button>
-					<button type="button" class="btn btn-primary js-timer-pause">
+					<button type="button" class="btn btn-warning js-timer-pause">
 						Pause
 					</button>
-					<button type="button" class="btn btn-primary js-timer-stop">
+					<button type="button" class="btn btn-danger js-timer-stop">
 						Stop
 					</button>
 				</div>
