Screen: limit time

--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -66,12 +66,13 @@
 			top: 788px;
 			font-size: 70px;
 			font-weight: 700;
-			left: 0;
-			right: 536px;
+			left: 510px;
+			right: 526px;
 			text-align: right;
 			font-variant-numeric: tabular-nums;
 			opacity: 0;
 			transition: opacity 0.3s 1s;
+			padding-right: 9px;
 		}
 		.timer.is-active {
 			opacity: 1;
