--- a/src/client/config.html
+++ b/src/client/config.html
@@ -18,6 +18,35 @@
 	<body>
 		<main role="main">
 			<section class="container mt-4">
+				<h1>Counter</h1>
+				<ul class="list-group">
+					<li
+						class="list-group-item d-flex justify-content-between align-items-center"
+					>
+						Guests
+						<span class="badge badge-light badge-pill js-connected-clients"
+							>?</span
+						>
+					</li>
+					<li
+						class="list-group-item d-flex justify-content-between align-items-center"
+					>
+						Screens
+						<span class="badge badge-light badge-pill js-connected-screens"
+							>?</span
+						>
+					</li>
+					<li
+						class="list-group-item d-flex justify-content-between align-items-center"
+					>
+						Configs
+						<span class="badge badge-light badge-pill js-connected-configs"
+							>?</span
+						>
+					</li>
+				</ul>
+			</section>
+			<section class="container mt-4">
 				<h1>Timer</h1>
 				<div class="form-inline">
 					<div class="form-group mr-3 mb-2">
