Config: more descriptive titles

--- a/src/client/config.html
+++ b/src/client/config.html
@@ -47,7 +47,7 @@
 				</ul>
 			</section>
 			<section class="container mt-4">
-				<h1>Timer</h1>
+				<h1>Timer [s]</h1>
 				<div class="form-inline">
 					<div class="form-group mr-3 mb-2">
 						<input
@@ -75,7 +75,7 @@
 				</div>
 			</section>
 			<section class="container mt-4">
-				<h1>Involved</h1>
+				<h1>Involved duration [s]</h1>
 				<div class="form-inline">
 					<div class="form-group mr-3 mb-2">
 						<input
