Config: bottom padding

--- a/src/client/config.html
+++ b/src/client/config.html
@@ -16,7 +16,7 @@
 		<script defer src="config.js"></script>
 	</head>
 	<body>
-		<main role="main">
+		<main role="main" class="pb-4">
 			<section class="container mt-4">
 				<h1>Counter</h1>
 				<ul class="list-group">
