Client: instructions always small

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -103,12 +103,12 @@
 		}
 		.instructions {
 			position: absolute;
-			bottom: 10%;
+			bottom: 0;
 			left: 0;
 			right: 0;
 			padding: 1em;
 			text-align: center;
-			font-size: 7vw;
+			font-size: 30px;
 			z-index: 1;
 			text-shadow: 0 0 60px #000000;
 			transition-property: opacity, visibility;
