--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -196,28 +196,25 @@
 		.entrance {
 			position: absolute;
 			top: 1530px;
-			left: 345px;
-			right: 364px;
+			left: 437px;
+			right: 495px;
 			text-align: center;
 			font-size: 30px;
 			line-height: 1.3;
 		}
 		.entrance div {
 			font-size: 16px;
-			opacity: 0.5;
+			opacity: 0.6;
+			padding-left: 5.6ex;
 		}
 		.entrance span {
 			text-transform: uppercase;
 		}
 		.entrance span:first-of-type,
 		.entrance span:last-of-type {
-			opacity: 0.5;
+			opacity: 0.7;
 		}
 		.entrance span:last-of-type {
-			padding-right: 1ex;
-		}
-		.entrance span:nth-of-type(2) {
-			padding-right: 0.3ex;
 		}
 		.camera {
 			position: absolute;
@@ -313,7 +310,7 @@
 			</div>
 			<div class="entrance">
 				<div>zapojte se na</div>
-				<span>www.</span><span>rozsvit</span><span>horice</span><span>.cz</span>
+				<span>www.</span><span>zasvit</span><span>.cz</span>
 			</div>
 			<div class="camera">
 				Foťte bez blesku!
