Config: hide entrance option

--- a/src/client/config.html
+++ b/src/client/config.html
@@ -117,6 +117,16 @@
 							Building only
 						</label>
 					</div>
+					<div class="form-check">
+						<input
+							id="entrance-1"
+							type="checkbox"
+							class="form-check-input js-entrance-visible"
+						/>
+						<label class="form-check-label" for="entrance-1">
+							Entrance visible
+						</label>
+					</div>
 				</div>
 			</section>
 		</main>
