--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -201,6 +201,11 @@
 			text-align: center;
 			font-size: 30px;
 			line-height: 1.3;
+			opacity: 0;
+			transition: opacity 0.3s;
+		}
+		.is-entranceVisible .entrance {
+			opacity: 1;
 		}
 		.entrance div {
 			font-size: 16px;
@@ -213,8 +218,6 @@
 		.entrance span:first-of-type,
 		.entrance span:last-of-type {
 			opacity: 0.7;
-		}
-		.entrance span:last-of-type {
 		}
 		.camera {
 			position: absolute;
@@ -304,9 +307,6 @@
 						ČECHOVÁ.
 					</div>
 				</div>
-			</div>
-			<div class="entrance-invite">
-				zapojte se na
 			</div>
 			<div class="entrance">
 				<div>zapojte se na</div>
