Config: involved - restart position button

--- a/src/client/config.html
+++ b/src/client/config.html
@@ -93,6 +93,11 @@
 						Set
 					</button>
 				</div>
+				<div class="btn-group">
+					<button type="button" class="btn btn-warning js-involved-restart">
+						Restart position
+					</button>
+				</div>
 			</section>
 			<section class="container mt-4">
 				<h1>Building</h1>
