Dvůr specific updates

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,7 +2,7 @@
 <html lang="cs">
 	<head>
 		<meta charset="utf-8" />
-		<title>Rozsviť hořice</title>
+		<title>Rozsviť Dvůr Králové</title>
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1, minimum-scale=1"
@@ -58,10 +58,10 @@
 		}
 		.background {
 			position: absolute;
-			top: calc(50% - 960px);
-			left: calc(50% - 600px);
-			width: 1200px;
-			height: 1920px;
+			top: calc(50% - 600px);
+			left: calc(50% - 717px);
+			width: 1434px;
+			height: 1200px;
 		}
 		.background::before,
 		.background::after {
