--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -14,7 +14,7 @@
 			margin: 0;
 			color: #ffffff;
 			background-color: #000000;
-			--involved-duration: 90s;
+			--involved-duration: 150s;
 		}
 		* {
 			font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
@@ -137,13 +137,13 @@
 			left: 44px;
 			right: 50px;
 			white-space: nowrap;
-			font-size: 20px;
+			font-size: 23px;
 			clip-path: polygon(
 				-80% -80%,
-				40.9% -80%,
-				40.9% 180%,
-				58.4% 180%,
-				58.4% -80%,
+				41.9% -80%,
+				41.9% 180%,
+				59.6% 180%,
+				59.6% -80%,
 				180% -80%,
 				180% 180%,
 				-180% 180%
@@ -163,6 +163,7 @@
 			width: fit-content;
 			padding-left: 150%;
 			animation: involved-in-scroll linear infinite var(--involved-duration);
+			/*animation: involved-in-scroll linear infinite 500s -300s;*/
 		}
 		.is-involvedRestart .involved-in {
 			animation-name: involved-in-scroll-2;
@@ -246,14 +247,13 @@
 			<div class="involved">
 				<div class="involved-in">
 					<div class="involved-content">
-						<!-- @TODO -->
 						Scénář, režie, choreografie, obrazy, multimediální vizualizace:
 						ZDEŇKA ČECHOVÁ - Hudba: MIROSLAV VOBOŘIL - Počítačové efekty,
-						animace, střih v technické spolupráci se studenty ČVUT v Praze:
-						FILIP CHALUPA, LUKÁŠ CHALUPA, LUKÁŠ CHUDÁČEK, ANNA KRUPIČKOVÁ, SÁRA
-						LUŠTĚKOVÁ, TEREZA MACHAČOVÁ, ŠTĚPÁN SÝKORA, MARKO ŠOLTÉS, ZHANNA
-						TURYLO - Projekce a ozvučení: JAROMÍR LANDSMAN - Produkce: ZDEŇKA
-						ČECHOVÁ.
+						animace, střih v technické spolupráci se studenty FIT ČVUT v Praze:
+						LUCIA ČAHOJOVÁ, TIMEA ČITBAJOVÁ, DANIEL HONYS, DANIEL JANOTA, JAKUB
+						LUŇÁČEK, ADAM MAKARA, TOMÁŠ MAREK, ONDŘEJ MÄRZ, KAROLÍNA RITZKOVÁ -
+						Technická podpora a kompletace: FILIP CHALUPA, LUKÁŠ CHALUPA -
+						Projekce a ozvučení: JAROMÍR LANDSMAN - Produkce: ZDEŇKA ČECHOVÁ.
 					</div>
 				</div>
 			</div>
