Screen: hide text

--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -236,6 +236,13 @@
 		.entrance::before {
 			top: -2px;
 		}
+		.title,
+		.entrance,
+		.involved,
+		.timer,
+		.camera {
+			display: none;
+		}
 	</style>
 	<body>
 		<div class="playground">
