Update light vs butterfly label

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -179,7 +179,7 @@
 	<body>
 		<div class="playground js-playground" touch-action="none">
 			<div class="instructions">
-				Hýbejte světlem<br />tahem prstu<br />po obrazovce
+				Hýbejte motýlem<br />tahem prstu<br />po obrazovce
 			</div>
 			<div class="background js-background"></div>
 			<div class="reflector js-reflector">
